# option

./: .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  option_visualization.natvis
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  generate.py
cmake/: clang_tidy.cmake  compiler_warnings.cmake  option-config.cmake.in  sanitizers.cmake
debugger/: option.natstepfilter  option.natvis
doc/: macros.md  reference.md  sentinel.md
doc/markdown/: builtin_traits.md  cmake_variables.md  custom_option_traits.md  custom_traits_guide.md  macros.md  reference.md  sentinel.md
docs/: README.md  _sidebar.md  builtin_traits.md  cmake_variables.md  custom_traits_guide.md  feature_list.md  index.html  macros.md  reference.md
docs/img/: credits.txt
docs/libs/: docsify-footnote.min.js
docs/markdown/: builtin_traits.md  cmake_variables.md  custom_traits_guide.md  macros.md  reference.md
examples/: CMakeLists.txt  check.py  functions.cpp  methods.cpp  operators.cpp  option_flag.cpp  option_traits.cpp
include/: option.hpp
include/opt/: option.hpp  option_fwd.hpp
test/: CMakeLists.txt  constexpr.test.cpp  forward_std.test.cpp  functions.cpp  functions.test.cpp  lifetime.test.cpp  main.cpp  meta.test.cpp  operators.test.cpp  option.test.cpp  option_traits.test.cpp  special.test.cpp  special_traits.test.cpp  type.test.cpp  utils.hpp
test/cmake/ExternalProject/: CMakeLists.txt
test/cmake/FetchContent/: CMakeLists.txt  main.cpp
test/cmake/add_subdirectory/: CMakeLists.txt
test/cmake/find_package/: CMakeLists.txt
test/codegen/: CMakeLists.txt  run.py  sample.cpp
